# distributed-wallet-scripts

./: Cargo.toml  README.md
init/: Cargo.toml
init/src/: main.rs
noise_client/: Cargo.toml
noise_client/src/: main.rs
noise_server/: Cargo.toml
noise_server/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
