[package]
name = "noise_client"
version = "0.1.0"
authors = ["JSwambo <jake.t.swambo@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3"
noiseexplorer_kk = { path = "../Noise_KK" }
rand = "0.7.3"
