[package]
name = "utils"
version = "0.1.0"
authors = ["JSwambo <jake.t.swambo@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noiseexplorer_kk = { path = "../Noise_KK" }
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3"